# FocalSearch

./: .gitignore  CMakeLists.txt  change.py
algorithms/NsqPuzzle/: AStar.h  BFS.h  FS.h  Heuristics.h  PE.h  PFS.h  PuzzleAlgorithm.h
algorithms/SSSP_2DPlane/: AStar.h  Dijkstra.h  GraphAlgorithm.h
base/: Algorithm.h  Exception.h  ProblemStatement.h
problems/NsqPuzzle/: DataCreation.cpp  Puzzle.h
problems/SSSP_2DPlane/: DataCreation.cpp
results/: run.py
src/NsqPuzzle/: execute.cpp
src/SSSP_2DPlane/: execute.cpp
test/NsqPuzzle/: test.cpp
